--- a/.gitignore
+++ b/.gitignore
@@ -270,3 +270,31 @@ FakesAssemblies/
 /Build_1800/GlobalGameJam15_Build001_Data/mainData
 /Build_1800/GlobalGameJam15_Build001_Data/output_log.txt
 /Build_1800/GlobalGameJam15_Build001_Data/sharedassets0.assets
+/Build_1300/GlobalGameJam15_Build002.exe
+/Build_1300/GlobalGameJam15_Build002_Data/Managed/Assembly-CSharp-firstpass.dll
+/Build_1300/GlobalGameJam15_Build002_Data/Managed/Assembly-CSharp.dll
+/Build_1300/GlobalGameJam15_Build002_Data/Managed/Assembly-UnityScript-firstpass.dll
+/Build_1300/GlobalGameJam15_Build002_Data/Managed/Boo.Lang.dll
+/Build_1300/GlobalGameJam15_Build002_Data/Managed/Mono.Security.dll
+/Build_1300/GlobalGameJam15_Build002_Data/Managed/System.Core.dll
+/Build_1300/GlobalGameJam15_Build002_Data/Managed/System.dll
+/Build_1300/GlobalGameJam15_Build002_Data/Managed/UnityEngine.UI.dll
+/Build_1300/GlobalGameJam15_Build002_Data/Managed/UnityEngine.dll
+/Build_1300/GlobalGameJam15_Build002_Data/Managed/mscorlib.dll
+/Build_1300/GlobalGameJam15_Build002_Data/Mono/etc/mono/1.0/DefaultWsdlHelpGenerator.aspx
+/Build_1300/GlobalGameJam15_Build002_Data/Mono/etc/mono/1.0/machine.config
+/Build_1300/GlobalGameJam15_Build002_Data/Mono/etc/mono/2.0/Browsers/Compat.browser
+/Build_1300/GlobalGameJam15_Build002_Data/Mono/etc/mono/2.0/DefaultWsdlHelpGenerator.aspx
+/Build_1300/GlobalGameJam15_Build002_Data/Mono/etc/mono/2.0/machine.config
+/Build_1300/GlobalGameJam15_Build002_Data/Mono/etc/mono/2.0/settings.map
+/Build_1300/GlobalGameJam15_Build002_Data/Mono/etc/mono/2.0/web.config
+/Build_1300/GlobalGameJam15_Build002_Data/Mono/etc/mono/browscap.ini
+/Build_1300/GlobalGameJam15_Build002_Data/Mono/etc/mono/config
+/Build_1300/GlobalGameJam15_Build002_Data/Mono/etc/mono/mconfig/config.xml
+/Build_1300/GlobalGameJam15_Build002_Data/Mono/mono.dll
+/Build_1300/GlobalGameJam15_Build002_Data/PlayerConnectionConfigFile
+/Build_1300/GlobalGameJam15_Build002_Data/Resources/unity default resources
+/Build_1300/GlobalGameJam15_Build002_Data/Resources/unity_builtin_extra
+/Build_1300/GlobalGameJam15_Build002_Data/mainData
+/Build_1300/GlobalGameJam15_Build002_Data/output_log.txt
+/Build_1300/GlobalGameJam15_Build002_Data/sharedassets0.assets
